src/test/deca/context/invalid/created/SansObjet/InvalidType.deca
// Description:
//   Teste la declaration d'une variable avec un type invalide
// Resultats:
//    InvalidType.deca:7:4: Error: Type 'sfgs' is not defined

{
    sfgs a;
}
